fixed card alignment issue

--- a/src/components/card-list/card-list.style.scss
+++ b/src/components/card-list/card-list.style.scss
@@ -3,9 +3,9 @@
 .cardList {
 	&-container {
 		width: $width;
-		margin: 0 auto;
 		display: grid;
-		grid-template-columns: repeat(auto-fill, minmax(15rem, 1fr));
+		grid-template-columns: repeat(auto-fill, minmax(15rem, 15em));
+		justify-content: space-between;
 		grid-gap: 4.6rem;
 	}
 }
